# workout-tracker

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/workout_tracker/: better_enum.py  exercise.py  main.py  measurement.py  workout.py
tests/: test_exercise.py  test_main.py  test_measurement.py
