[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "workout_tracker"
version = "0.0.0"
description = ""
readme = "README.md"
authors = ["Stefan Lindt <stefan_p.koch@web.de>"]
# license = ""
repository = "https://github.com/S7ef4n/workout-tracker"

[tool.poetry.dependencies]
python = "^3.11"
pytimeparse = "^1.1.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
flake8 = "^6.0.0"
bandit = {extras = ["toml"], version = "^1.7.4"}
black = "^23.1.0"
darglint = "^1.8.1"
isort = {extras = ["colors"], version = "^5.12.0"}
mypy-extensions = "^1.0.0"
pre-commit = "^3.0.4"
pydocstyle = "^6.3.0"
pytest = "^7.2.1"
pyupgrade = "^3.3.1"
coverage = "^7.1.0"
pytest-html = "^3.2.0"
pytest-cov = "^4.0.0"
pylint = "^2.16.2"
hypothesis = "^6.70.0"

[tool.black]
target-version = ["py311"]
line-length = 79
color = true

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
pretty = true

[tool.isort]
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
line_length = 79

[tool.pylint.master]
fail-under = 8
ignore-paths = ".*/tests/.*.py"

[tool.pylint.'MESSAGE CONTROL']
disable = [
    "C0114",
    "R0903"
]

[tool.pylint.format]
max-line-length = 79
good-names = "i, j, k"

[tool.pylint.reports]
reports = "no"

[tool.pytest.ini_options]
addopts = "--junitxml=junit_results.xml --cov-report=xml:coverage.xml --cov-fail-under=80"
markers= [
    "unit",
    "integration",
    "system"
]
testpaths = [
    "tests"
]

[tool.coverage.run]
source = ["tests"]
branch = true

[tool.bandit]
exclude_dirs = ["tests",]
